Add Hello Clever payment integration and configuration updates
- Introduced Hello Clever payment adapter and client for processing payments.
- Updated application configuration files to include Hello Clever settings.
- Enhanced payment request and response DTOs to accommodate Hello Clever API structure.
- Improved validation and logging for payment creation process.